[gd_scene load_steps=13 format=3 uid="uid://dtone6hpojcx1"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_1fcfm"]
[ext_resource type="Texture2D" uid="uid://dt0af4o7yh41a" path="res://Assets/Player/Player.png" id="1_iyxsd"]
[ext_resource type="Script" path="res://Scenes/shooting.gd" id="3_dhst3"]
[ext_resource type="PackedScene" uid="uid://bojqq0wbhl785" path="res://Scenes/laser.tscn" id="4_f23lw"]
[ext_resource type="Texture2D" uid="uid://bi2vdab3slwgf" path="res://Assets/Player/Player-explosion1.png" id="5_quymd"]
[ext_resource type="Texture2D" uid="uid://b4mk25ro2nqtu" path="res://Assets/Player/Player-explosion2.png" id="6_txnpx"]
[ext_resource type="Texture2D" uid="uid://dsg2krqtkgnca" path="res://Assets/Player/Player-explosion3.png" id="7_mp6n4"]
[ext_resource type="AudioStream" uid="uid://yon7d5k2aonu" path="res://Assets/Audio/Player_Destroyed.wav" id="9_ef3d3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7q3x"]
size = Vector2(1.26316, 3.15789)

[sub_resource type="Animation" id="Animation_4igqk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_iyxsd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_ciwu0"]
resource_name = "destroy"
length = 2.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_quymd"), ExtResource("6_txnpx"), ExtResource("7_mp6n4"), ExtResource("5_quymd"), ExtResource("6_txnpx"), ExtResource("7_mp6n4"), ExtResource("5_quymd"), ExtResource("6_txnpx"), ExtResource("7_mp6n4")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_destroyed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_ef3d3")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(0, 2.23333)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.7, 3.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ifh0c"]
_data = {
"RESET": SubResource("Animation_4igqk"),
"destroy": SubResource("Animation_ciwu0")
}

[node name="Player" type="Area2D"]
script = ExtResource("1_1fcfm")
laser_scene = ExtResource("4_f23lw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_iyxsd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
scale = Vector2(4.75, 4.75)
shape = SubResource("RectangleShape2D_w7q3x")

[node name="ShotOrigin" type="Node2D" parent="."]
position = Vector2(0, -4)
rotation = 3.14159
script = ExtResource("3_dhst3")
laser_scene = ExtResource("4_f23lw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ifh0c")
}

[node name="player_destroyed" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
